methods.args.MethodsArgs.scala.error
Compilation error:
MethodsArgs:4: error: Invalid literal number
  for(-<1to nbPas){
        ^MethodsArgs:4: error: '<-' expected but something found.
  for(-<1to nbPas){
        ^MethodsArgs:7: error: illegal start of simple expression
  }
  ^